# flask-device-anomaly-detection

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dp_temp_anomaly_model.h5  pyproject.toml  requirements.txt  test-flask-device-anomaly-detection.py  test_flask-device-anomaly-detection.py
.github/workflows/: build.yml  flask-device-anomaly-detection.yml
.reuse/: dep5
app/: app.py
tests/: test_anomaly_detection.py
